# cppConfig

./: meson.build
include/cppconfig/: cppconfig.hpp
include/cppconfig/io/: json.hpp  yaml.hpp
tests/json/: test.cpp
tests/yaml/: test.cpp
